<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="siguiente">Siguiente</string>
    <string name="informacion_basica">Informacion Basica</string>
    <string name="valor_noche">Valor por noche</string>
    <string name="descripcion">Descripción</string>
    <string name="fotos">Fotos</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="camara">Cámara</string>
    <string name="localizacion">Localización</string>
    <string name="tipo_alojamiento">Tipo Alojamiento</string>
    <string name="moneda">Moneda</string>
    <string name="fechas">Fechas</string>
    <string name="capacidad">Capacidad</string>
    <string name="precio">Precio</string>
    <string name="detalle">Detalle</string>
    <string name="reservar_alojamiento">Reservar Alojamiento</string>
    <string name="sitios_de_interes">Sitios de Interes</string>
    <string name="reservar">Reservar</string>
    <string name="ver_perfil">Ver Perfil</string>
    <string name="comentarios">Comentarios</string>
    <string name="filtrar_busqueda">Filtrar Busqueda</string>
    <string name="agregar_sitios_interes">Agregar Sitios de Interes</string>
    <string name="tipo_sitio_interes">Tipo Sitio de Interes</string>
    <string name="historial_reservas">Historial de Reservas</string>
    <string name="propietario">Propietario</string>
    <string name="calificar">Calificar</string>
</resources>