<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultarAlojamientoDetalleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="true"
        android:scrollIndicators="top|end"
        android:scrollbarFadeDuration="1"
        android:scrollbarSize="10dp"
        android:scrollbarStyle="insideInset">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/consultar_alojamiento"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/md_green_A400"
                    android:text="@string/inicio"
                    android:textColor="@android:color/background_light"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/salir9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/md_green_A400"
                    android:text="@string/salir"
                    android:textColor="@android:color/background_light"
                    android:textSize="10sp" />
            </LinearLayout>

            <ListView
                android:id="@+id/listComentarios"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:scrollbarSize="5dp"
                android:scrollbarStyle="outsideInset"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView31" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/comentarios"
                android:textAlignment="textStart"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/detalleTipo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo_alojamiento"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="324dp" />

                    <TextView
                        android:id="@+id/detalleValor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/valor_noche"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="406dp" />

                    <TextView
                        android:id="@+id/detalleMoneda"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/moneda"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/descripcion"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="447dp" />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/detalleDescripcion"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/descripcion" />
                        </LinearLayout>
                    </ScrollView>

                </LinearLayout>

                <Button
                    android:id="@+id/button15"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_margin="2dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/usuario"
                    android:padding="2dp"
                    android:text="@string/ver_perfil"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    tools:layout_editor_absoluteX="212dp"
                    tools:layout_editor_absoluteY="352dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="358dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detalleRatingBar">

                <Button
                    android:id="@+id/sitiosDeInteres"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sitios_de_interes"
                    tools:layout_editor_absoluteX="86dp"
                    tools:layout_editor_absoluteY="554dp" />

                <Button
                    android:id="@+id/detalleReservar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/reservar"
                    tools:layout_editor_absoluteX="133dp"
                    tools:layout_editor_absoluteY="167dp" />
            </LinearLayout>

            <RatingBar
                android:id="@+id/detalleRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:isIndicator="true"
                android:max="5"
                android:numStars="5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout11" />

            <GridView
                android:id="@+id/gridFotos"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:fadeScrollbars="true"
                android:fastScrollAlwaysVisible="true"
                android:numColumns="2"
                android:scrollbarFadeDuration="1"
                android:scrollbarSize="10dp"
                android:scrollbarStyle="insideInset"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView29" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>